--- a/composer.json
+++ b/composer.json
@@ -1,31 +1,15 @@
 {
-    "name": "recursivetree/seat-billing",
-    "description": "Plugin to assist with corp/alliance billing statements",
+    "name": "bjk/seat-upgrades",
+    "description": "Modifications to SeAT for DECOY",
     "type": "seat-plugin",
     "license": "GPL-2.0-only",
     "authors": [
         {
-            "name": "Denngarr B'tarn",
-            "email": "ed.stafford@gmail.com"
-        },
-        {
-            "name": "recursivetree",
-            "email": "recursivetreemail@gmail.com"
+            "name": "BJK",
+            "email": "bjkerridge@live.co.uk"
         }
     ],
     "minimum-stability": "stable",
-    "autoload": {
-        "psr-4": {
-            "Denngarr\\Seat\\Billing\\": "src/"
-        }
-    },
-    "extra": {
-        "laravel": {
-            "providers": [
-                "Denngarr\\Seat\\Billing\\BillingServiceProvider"
-            ]
-        }
-    },
     "require": {
         "php": "^8.1",
         "eveseat/services": "^5.0.1",
