--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "autoload": {
         "psr-4": {
-            "Seat\\Web\\": "src/"
+            "BJK\\Decoy\\": "src/"
         }
     },
     "minimum-stability": "stable",
