--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "autoload": {
         "psr-4": {
-            "BJK\\Decoy\\Seat\\": "src/"
+            "bjk\\seatupgrades\\": "src/"
         }
     },
     "minimum-stability": "stable",
@@ -26,7 +26,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "BJK\\Decoy\\Seat\\DecoyServiceProvider"
+                "bjk\\seatupgrades\\DecoyServiceProvider"
             ]
         }
     }
