Revert "Updated composer"
This reverts commit 848ef34e6896888faa698b9b2b615df7a62d4188.

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "autoload": {
         "psr-4": {
-            "Seat\\Web\\": "src/"
+            "BJK\\Decoy\\Seat\\": "src/"
         }
     },
     "minimum-stability": "stable",
